project/stage/tests/reject/undeclared.ul
void main(){
  a = 1 + 1;
  print a;
}
